Use umlauts in White Rabbit legend

--- a/white-rabbit.html
+++ b/white-rabbit.html
@@ -202,8 +202,8 @@
       <tbody>
         <tr><td><code>W</code></td><td>Lesezeichen setzen</td></tr>
         <tr><td><code>A</code></td><td>Zum naechsten Lesezeichen springen (zyklisch)</td></tr>
-        <tr><td><code>D</code></td><td>Lesezeichen-Leiste oeffnen</td></tr>
-        <tr><td><code>S</code></td><td>Lesezeichen-Leiste schliessen</td></tr>
+        <tr><td><code>D</code></td><td>Lesezeichen-Leiste öffnen</td></tr>
+        <tr><td><code>S</code></td><td>Lesezeichen-Leiste schließen</td></tr>
       </tbody>
     </table>
 
@@ -213,9 +213,9 @@
         <tr><th>Key</th><th>Aktion</th></tr>
       </thead>
       <tbody>
-        <tr><td><code>3</code></td><td>Suche oeffnen</td></tr>
-        <tr><td><code>/</code></td><td>Suche oeffnen (alternativ)</td></tr>
-        <tr><td><code>E</code></td><td>Suche schliessen</td></tr>
+        <tr><td><code>3</code></td><td>Suche öffnen</td></tr>
+        <tr><td><code>/</code></td><td>Suche öffnen</td></tr>
+        <tr><td><code>E</code></td><td>Suche schließen</td></tr>
       </tbody>
     </table>
 
@@ -225,8 +225,8 @@
         <tr><th>Key</th><th>Aktion</th></tr>
       </thead>
       <tbody>
-        <tr><td><code>1</code></td><td>Inhaltsverzeichnis oeffnen</td></tr>
-        <tr><td><code>2</code></td><td>Inhaltsverzeichnis schliessen</td></tr>
+        <tr><td><code>1</code></td><td>Inhaltsverzeichnis öffnen</td></tr>
+        <tr><td><code>2</code></td><td>Inhaltsverzeichnis schließen</td></tr>
       </tbody>
     </table>
 
