Add matrix style overlays and effects

--- a/elektrotechnik/elektrotechnik.html
+++ b/elektrotechnik/elektrotechnik.html
@@ -89,6 +89,7 @@ a:hover{
   <link rel="stylesheet" href="../search.css">
   <link rel="stylesheet" href="../toc.css">
   <link rel="stylesheet" href="../music.css">
+  <link rel="stylesheet" href="../matrix-effects.css">
 </head>
 <body>
   <nav class="home-only">
