--- a/white-rabbit.html
+++ b/white-rabbit.html
@@ -157,6 +157,7 @@
   <link rel="stylesheet" href="search.css">
   <link rel="stylesheet" href="toc.css">
   <link rel="stylesheet" href="music.css">
+  <link rel="stylesheet" href="matrix-effects.css">
 </head>
 <body>
   <canvas id="rain"></canvas>
