--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
   <link rel="stylesheet" href="search.css">
   <link rel="stylesheet" href="toc.css">
   <link rel="stylesheet" href="music.css">
+  <link rel="stylesheet" href="matrix-effects.css">
 </head>
 <body>
 
