--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -179,6 +179,7 @@
   <link rel="stylesheet" href="../search.css">
   <link rel="stylesheet" href="../toc.css">
   <link rel="stylesheet" href="../music.css">
+  <link rel="stylesheet" href="../matrix-effects.css">
 </head>
 <body>
   <nav class="home-only">
