--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -224,12 +224,12 @@
     <dl>
   <dt>Reliabität</dt>
   <dd>Sind die Daten reproduzierbar? Liegen die Werte bei Messwiederholung
-    nahe beieinander?
+    nahe beieinander? (Fadenkreuz: Präzision)
   </dd>
 
   <dt id="int-valid">Validität</dt>
   <dd>Wie gut repräsentieren die erzeugten Werte die zu messende Größe (das 
-    Konstrukt)?
+    Konstrukt)? (Fadenkreuz: Genauigkeit)
   </dd>
 
   <dt>Objektivität</dt>
@@ -242,8 +242,7 @@
 <dl>
   <dt>Internale Validität</dt>
   <dd>Können berichtete Effekte eindeutig auf die Untersuchungsbedingungen 
-    zurückgeführt werden? Gibt es Alternativerklärungen? (Laborstudien, Experimente,
-    RCTs)
+    zurückgeführt werden? Gibt es Alternativerklärungen? (Laborstudien, Experimente)
   </dd>
 
   <dt>Externale Validität</dt>
@@ -254,6 +253,17 @@
 
 
 <p> Gütekriterien im Gesamtzusammenhang statistischer Schlussfolgerungen:</p>
+<p>
+1) <strong>Daten</strong> (n Werte) weisen Reliabilität und Validität auf.
+2) Eine <strong>Stichprobe</strong> (N Studierende der HAW) weist Internale Validität auf.
+3) Eine <strong> Studienpopulation</strong> (Studierende der HAW) weist Externale Validität auf.
+4) Die <strong> angezielte Population</strong> (Studierende in Deutschland) wird geschlussfolgert.
+</p>
+<p>Die Ergebnisse aus 1) können auf die Population (Studierende in Deutschland) übertragen werden.</p>
+
+<p>Deckeneffekt:</p>
+<p>Eine Briefwaage, die maximal 100 Gramm anzeigen kann, liefert über 100 Gramm immer den gleichen Wert.
+</p>
 
 
 
