--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -251,6 +251,11 @@
   </dd>
 </dl>
 
+<p>Internale Validität ist für externale Validität eine notwendige, aber keine hinreichende 
+  Bedingung.
+</p>
+<p></p>
+
 
 <p> Gütekriterien im Gesamtzusammenhang statistischer Schlussfolgerungen:</p>
 <p>
@@ -261,10 +266,27 @@
 </p>
 <p>Die Ergebnisse aus 1) können auf die Population (Studierende in Deutschland) übertragen werden.</p>
 
+
+<p></p>
 <p>Deckeneffekt:</p>
 <p>Eine Briefwaage, die maximal 100 Gramm anzeigen kann, liefert über 100 Gramm immer den gleichen Wert.
 </p>
 
+
+<p></p>
+<p id="int-valid">>Wie erreicht man bei Stichprobengewinnung externale Validität?</p>
+
+<ul>
+<li>1) Zufallsstichproben (<strong>Random Sampling</strong>) bewirken <strong>globale Repräsentativität</strong>, sodass die 
+Befunde sich auf die Population generalisieren lassen. Diese Befunde sind robust in Bezug 
+auf die ausgewählten Einheiten.</li>
+<li>2) Randomisierung (<strong>Random Assignment</strong>) ordnet die rekrutierte Untersuchungseinheit (UE) den Gruppen 
+des Experiments zufällig zu.</li>
+</ul>
+
+<p>Statistische Schätzverfahren gehen von der Annahme aus, dass Messungen unabhängig voneinander 
+  sind.</p>
+  <p></p>
 
 
 
