--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -258,12 +258,12 @@
 
 
 <p> Gütekriterien im Gesamtzusammenhang statistischer Schlussfolgerungen:</p>
-<p>
-1) <strong>Daten</strong> (n Werte) weisen Reliabilität und Validität auf.
-2) Eine <strong>Stichprobe</strong> (N Studierende der HAW) weist Internale Validität auf.
-3) Eine <strong> Studienpopulation</strong> (Studierende der HAW) weist Externale Validität auf.
-4) Die <strong> angezielte Population</strong> (Studierende in Deutschland) wird geschlussfolgert.
-</p>
+<p><ul>
+<li>1) <strong>Daten</strong> (n Werte) weisen Reliabilität und Validität auf.</li>
+<li>2) Eine <strong>Stichprobe</strong> (N Studierende der HAW) weist Internale Validität auf.</li>
+<li>3) Eine <strong> Studienpopulation</strong> (Studierende der HAW) weist Externale Validität auf.</li>
+<li>4) Die <strong> angezielte Population</strong> (Studierende in Deutschland) wird geschlussfolgert.</li>
+</ul></p>
 <p>Die Ergebnisse aus 1) können auf die Population (Studierende in Deutschland) übertragen werden.</p>
 
 
@@ -274,14 +274,17 @@
 
 
 <p></p>
-<p id="int-valid">>Wie erreicht man bei Stichprobengewinnung externale Validität?</p>
+<p id="int-valid">>Wie erreicht man bei Stichprobengewinnung internale und externale Validität?</p>
 
 <ul>
 <li>1) Zufallsstichproben (<strong>Random Sampling</strong>) bewirken <strong>globale Repräsentativität</strong>, sodass die 
 Befunde sich auf die Population generalisieren lassen. Diese Befunde sind robust in Bezug 
-auf die ausgewählten Einheiten.</li>
+auf die ausgewählten Einheiten. <strong>(Externale Validität) </strong></li>
 <li>2) Randomisierung (<strong>Random Assignment</strong>) ordnet die rekrutierte Untersuchungseinheit (UE) den Gruppen 
-des Experiments zufällig zu.</li>
+des Experiments zufällig zu. <strong>(Interale Validität) </strong><p><strong>Prinzip des statistischen Fehlerausgleichs:</strong> Bei ausreichender 
+Stichprobengröße werden die Besonderheiten der Untersuchungseinheit über die Gruppen verteilt. Dadurch nehmen diese 
+Besonderheiten keinen systematischen Einfluss (Alternativerklärung) auf die abhängige Variable. Auch unbekannte Besonderheiten (Confounder) sind 
+von diesem Effekt betroffen.</p></li>
 </ul>
 
 <p>Statistische Schätzverfahren gehen von der Annahme aus, dass Messungen unabhängig voneinander 
