--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -178,6 +178,8 @@
   <link rel="stylesheet" href="../bookmarks.css">
   <link rel="stylesheet" href="../search.css">
   <link rel="stylesheet" href="../toc.css">
+  <link rel="stylesheet" href="../music.css">
+  <link rel="stylesheet" href="../matrix-effects.css">
 </head>
 <body>
   <nav class="home-only">
@@ -198,6 +200,14 @@
       <ul class="search-results"></ul>
       <div class="search-empty">Keine Treffer.</div>
     </div>
+  </div>
+
+  <div class="music-shell" data-audio="/audio/matrix.wav">
+    <button class="music-button" type="button" aria-label="Musik">
+      <svg class="music-icon" viewBox="0 0 24 24" aria-hidden="true">
+        <path d="M19 3v12.5a3.5 3.5 0 1 1-2-3.16V6.6l-8 1.7v8.2a3.5 3.5 0 1 1-2-3.16V4.5L19 3z"></path>
+      </svg>
+    </button>
   </div>
 
   <!-- Auto "Zurück" (erscheint nur nach Sprung) -->
@@ -423,5 +433,6 @@ von diesem Effekt betroffen.</p></li>
   <script src="../bookmarks.js"></script>
   <script src="../search.js"></script>
   <script src="../toc.js"></script>
+  <script src="../music.js"></script>
 </body>
 </html>
