Add wide text toggle with 5/6

--- a/elektrotechnik/elektrotechnik.html
+++ b/elektrotechnik/elektrotechnik.html
@@ -152,5 +152,6 @@ a:hover{
   <script src="../search.js"></script>
   <script src="../toc.js"></script>
   <script src="../music.js"></script>
+  <script src="../view.js"></script>
 </body>
 </html>
