--- a/index.html
+++ b/index.html
@@ -179,5 +179,6 @@
   <script src="search.js"></script>
   <script src="toc.js"></script>
   <script src="music.js"></script>
+  <script src="view.js"></script>
 </body>
 </html>
