--- a/statistik.html
+++ b/statistik.html
@@ -127,5 +127,6 @@ a:hover{
   <script src="search.js"></script>
   <script src="toc.js"></script>
   <script src="music.js"></script>
+  <script src="view.js"></script>
 </body>
 </html>
