--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -434,5 +434,6 @@ von diesem Effekt betroffen.</p></li>
   <script src="../search.js"></script>
   <script src="../toc.js"></script>
   <script src="../music.js"></script>
+  <script src="../view.js"></script>
 </body>
 </html>
