--- a/white-rabbit.html
+++ b/white-rabbit.html
@@ -190,6 +190,9 @@
         <path d="M19 3v12.5a3.5 3.5 0 1 1-2-3.16V6.6l-8 1.7v8.2a3.5 3.5 0 1 1-2-3.16V4.5L19 3z"></path>
       </svg>
     </button>
+    <button class="view-toggle" type="button" aria-label="Breiter Text" aria-pressed="false">
+      ⇔
+    </button>
   </div>
 
   <main>
@@ -228,6 +231,7 @@
       <tbody>
         <tr><td><code>1</code></td><td>Inhaltsverzeichnis öffnen</td></tr>
         <tr><td><code>2</code></td><td>Inhaltsverzeichnis schließen</td></tr>
+        <tr><td><code>7</code></td><td>UI ein-/ausblenden</td></tr>
       </tbody>
     </table>
 
