Add rain toggle on 8 with home fixed

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <link rel="stylesheet" href="music.css">
   <link rel="stylesheet" href="matrix-effects.css">
 </head>
-<body>
+<body data-rain-fixed="1">
 
   <!-- 1) Canvas muss in den BODY, nicht ins CSS -->
   <canvas id="rain"></canvas>
