--- a/white-rabbit.html
+++ b/white-rabbit.html
@@ -232,6 +232,7 @@
         <tr><td><code>1</code></td><td>Inhaltsverzeichnis öffnen</td></tr>
         <tr><td><code>2</code></td><td>Inhaltsverzeichnis schließen</td></tr>
         <tr><td><code>7</code></td><td>UI ein-/ausblenden</td></tr>
+        <tr><td><code>8</code></td><td>Matrix an-/ausschalten</td></tr>
       </tbody>
     </table>
 
