--- a/statistik.html
+++ b/statistik.html
@@ -87,16 +87,24 @@ a:hover{
   <link rel="stylesheet" href="matrix-effects.css">
 </head>
 <body>
+  <canvas id="rain"></canvas>
   <nav class="home-only">
     <a href="index.html" class="home">Schreibtisch</a>
   </nav>
   <div class="search-shell" data-index="search-index.json">
-    <button class="search-toggle" type="button" aria-label="Suche">
-      <svg class="search-icon" viewBox="0 0 24 24" aria-hidden="true">
-        <circle cx="11" cy="11" r="7" stroke="currentColor" stroke-width="2" fill="none"></circle>
-        <line x1="16.65" y1="16.65" x2="21" y2="21" stroke="currentColor" stroke-width="2"></line>
-      </svg>
-    </button>
+    <div class="search-actions">
+      <a class="home-mini" href="index.html" aria-label="Home">
+        <svg class="home-icon" viewBox="0 0 24 24" aria-hidden="true">
+          <path d="M12 4l8 7h-2v9h-5v-6H11v6H6v-9H4l8-7z"></path>
+        </svg>
+      </a>
+      <button class="search-toggle" type="button" aria-label="Suche">
+        <svg class="search-icon" viewBox="0 0 24 24" aria-hidden="true">
+          <circle cx="11" cy="11" r="7" stroke="currentColor" stroke-width="2" fill="none"></circle>
+          <line x1="16.65" y1="16.65" x2="21" y2="21" stroke="currentColor" stroke-width="2"></line>
+        </svg>
+      </button>
+    </div>
     <div class="search-panel" hidden>
       <div class="search-bar">
         <input class="search-input" type="search" placeholder="Suche im Wiki...">
@@ -113,6 +121,11 @@ a:hover{
         <path d="M19 3v12.5a3.5 3.5 0 1 1-2-3.16V6.6l-8 1.7v8.2a3.5 3.5 0 1 1-2-3.16V4.5L19 3z"></path>
       </svg>
     </button>
+    <button class="view-toggle" type="button" aria-label="Breiter Text" aria-pressed="false">
+      <svg class="view-icon" viewBox="0 0 24 24" aria-hidden="true">
+        <path d="M7 6h10v2H7V6zm-2 4h14v2H5v-2zm2 4h10v2H7v-2z"></path>
+      </svg>
+    </button>
   </div>
   <main>
     <h1>Statistik</h1>
@@ -123,6 +136,47 @@ a:hover{
     <li>
 </ul>
   </main>
+  <script>
+    const canvas = document.getElementById("rain");
+    const ctx = canvas.getContext("2d");
+
+    const chars = "アイウエオカキクケコサシスセソタチツテトナニヌネノ0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+    let drops = [];
+    const fontSize = 16;
+
+    function resize(){
+      const dpr = window.devicePixelRatio || 1;
+      canvas.width = Math.floor(window.innerWidth * dpr);
+      canvas.height = Math.floor(window.innerHeight * dpr);
+      ctx.setTransform(dpr,0,0,dpr,0,0);
+
+      const cols = Math.floor(window.innerWidth / fontSize);
+      drops = Array(cols).fill(0).map(() => Math.random() * (window.innerHeight / fontSize));
+      ctx.font = fontSize + "px ui-monospace, Menlo, monospace";
+    }
+
+    function draw(){
+      ctx.fillStyle = "rgba(0,0,0,0.08)";
+      ctx.fillRect(0,0,window.innerWidth,window.innerHeight);
+
+      for(let i=0;i<drops.length;i++){
+        const text = chars[Math.floor(Math.random()*chars.length)];
+        const x = i * fontSize;
+        const y = drops[i] * fontSize;
+
+        ctx.fillStyle = (Math.random() < 0.02) ? "#b6ffcc" : "#00ff66";
+        ctx.fillText(text, x, y);
+
+        if (y > window.innerHeight && Math.random() > 0.975) drops[i] = 0;
+        drops[i]++;
+      }
+      requestAnimationFrame(draw);
+    }
+
+    resize();
+    window.addEventListener("resize", resize);
+    draw();
+  </script>
   <script src="bookmarks.js"></script>
   <script src="search.js"></script>
   <script src="toc.js"></script>
