--- a/white-rabbit.html
+++ b/white-rabbit.html
@@ -168,12 +168,19 @@
 
   <div class="content">
   <div class="search-shell" data-index="search-index.json">
-    <button class="search-toggle" type="button" aria-label="Suche">
-      <svg class="search-icon" viewBox="0 0 24 24" aria-hidden="true">
-        <circle cx="11" cy="11" r="7" stroke="currentColor" stroke-width="2" fill="none"></circle>
-        <line x1="16.65" y1="16.65" x2="21" y2="21" stroke="currentColor" stroke-width="2"></line>
-      </svg>
-    </button>
+    <div class="search-actions">
+      <a class="home-mini" href="index.html" aria-label="Home">
+        <svg class="home-icon" viewBox="0 0 24 24" aria-hidden="true">
+          <path d="M12 4l8 7h-2v9h-5v-6H11v6H6v-9H4l8-7z"></path>
+        </svg>
+      </a>
+      <button class="search-toggle" type="button" aria-label="Suche">
+        <svg class="search-icon" viewBox="0 0 24 24" aria-hidden="true">
+          <circle cx="11" cy="11" r="7" stroke="currentColor" stroke-width="2" fill="none"></circle>
+          <line x1="16.65" y1="16.65" x2="21" y2="21" stroke="currentColor" stroke-width="2"></line>
+        </svg>
+      </button>
+    </div>
     <div class="search-panel" hidden>
       <div class="search-bar">
         <input class="search-input" type="search" placeholder="Suche im Wiki...">
@@ -191,7 +198,9 @@
       </svg>
     </button>
     <button class="view-toggle" type="button" aria-label="Breiter Text" aria-pressed="false">
-      ⇔
+      <svg class="view-icon" viewBox="0 0 24 24" aria-hidden="true">
+        <path d="M7 6h10v2H7V6zm-2 4h14v2H5v-2zm2 4h10v2H7v-2z"></path>
+      </svg>
     </button>
   </div>
 
