Generalize back button and update search placeholder

--- a/elektrotechnik/elektrotechnik.html
+++ b/elektrotechnik/elektrotechnik.html
@@ -125,7 +125,7 @@ a:hover{
     </div>
     <div class="search-panel" hidden>
       <div class="search-bar">
-        <input class="search-input" type="search" placeholder="Suche im Wiki...">
+        <input class="search-input" type="search" placeholder="Suche in der Matrix">
         <button class="search-close" type="button">x</button>
       </div>
       <ul class="search-results"></ul>
