--- a/white-rabbit.html
+++ b/white-rabbit.html
@@ -195,7 +195,7 @@
     </div>
     <div class="search-panel" hidden>
       <div class="search-bar">
-        <input class="search-input" type="search" placeholder="Suche im Wiki...">
+        <input class="search-input" type="search" placeholder="Suche in der Matrix">
         <button class="search-close" type="button">x</button>
       </div>
       <ul class="search-results"></ul>
