--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -249,7 +249,7 @@
     nahe beieinander? (Fadenkreuz: Präzision)
   </dd>
 
-  <dt id="int-valid">Validität</dt>
+  <dt>Validität</dt>
   <dd>Wie gut repräsentieren die erzeugten Werte die zu messende Größe (das 
     Konstrukt)? (Fadenkreuz: Genauigkeit)
   </dd>
@@ -303,10 +303,10 @@
 Befunde sich auf die Population generalisieren lassen. Diese Befunde sind robust in Bezug 
 auf die ausgewählten Einheiten. <strong>(Externale Validität) </strong></li>
 <li>2) Randomisierung (<strong>Random Assignment</strong>) ordnet die rekrutierte Untersuchungseinheit (UE) den Gruppen 
-des Experiments zufällig zu. <strong>(Interale Validität) </strong><p><strong>Prinzip des statistischen Fehlerausgleichs:</strong> Bei ausreichender 
+des Experiments zufällig zu. <strong>(Interale Validität) </strong><p>(<strong>Prinzip des statistischen Fehlerausgleichs:</strong> Bei ausreichender 
 Stichprobengröße werden die Besonderheiten der Untersuchungseinheit über die Gruppen verteilt. Dadurch nehmen diese 
 Besonderheiten keinen systematischen Einfluss (Alternativerklärung) auf die abhängige Variable. Auch unbekannte Besonderheiten (Confounder) sind 
-von diesem Effekt betroffen.</p></li>
+von diesem Effekt betroffen).</p></li>
 </ul>
 
 <p>Statistische Schätzverfahren gehen von der Annahme aus, dass Messungen unabhängig voneinander 
@@ -349,15 +349,7 @@ von diesem Effekt betroffen.</p></li>
   </tr>
 </p>
 
-    <ul>
-      <li>Reliabilität</li>
-      <li id="int-valid">Internale Validität</li>
-      <p>
-        Können berichtete Effekte eindeutig auf die Untersuchungsbedingungen 
-        zurückgeführt werden? Gibt es Alternativerklärungen?
-        → Laborstudien, Experimente, RCTs
-      </p>
-    </ul>
+  
 
 
 <table>
