--- a/elektrotechnik/elektrotechnik.html
+++ b/elektrotechnik/elektrotechnik.html
@@ -159,6 +159,24 @@ a:hover{
     Duis aute irure dolor in reprehenderit in voluptate velit esse 
     cillum dolore eu fugiat nulla pariatur.
   </p>
+
+  <table>
+  <tr>
+    <th>Spaltenüberschrift</th>
+    <th>Spaltenüberschrift</th>
+  </tr>
+  <tr>
+    <td>Zelle</td>
+    <td>Zelle</td>
+  </tr>
+  <tr>
+    <td>Zelle</td>
+    <td>Zelle</td>
+  </tr>
+</table>
+
+
+
   </main>
   <script src="../rain.js"></script>
   <script src="../bookmarks.js"></script>
