--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -314,15 +314,11 @@ von diesem Effekt betroffen).</p></li>
   <p></p>
 
 
-<p>Hierarchie der Evidenzen:</p>
+<p>Hierarchie der Evidenzen (höchste Evidenz zuerst):</p>
 
 <p>
 <table>
-  <tr>
-    <th><strong>Evidenzlevel</strong></th>
- 
-  </tr>
-  <tr>
+    <tr>
     <td>Systematische Reviews & Meta-Analysen</td>
 
   </tr>
@@ -347,25 +343,25 @@ von diesem Effekt betroffen).</p></li>
     <td>Expertenmeinung</td>
 
   </tr>
+  <p>(Die Internale Validität steigt mit zunehmendem Evidenzlevel).</p>
 </p>
 
   
+<h2 id="wissenschaftliche-methode">Wissenschaftliche Methode</h2>
 
 
-<table>
-  <tr>
-    <th>Spaltenüberschrift</th>
-    <th>Spaltenüberschrift</th>
-  </tr>
-  <tr>
-    <td>Zelle</td>
-    <td>Zelle</td>
-  </tr>
-  <tr>
-    <td>Zelle</td>
-    <td>Zelle</td>
-  </tr>
-</table>
+<p>Die Phasen empirischer Forschung (nach Whitehead, 1929)</p>
+<p><ul>
+<li>1) <strong>Beobachtung</strong>, Phänomene/Realität</li>
+<li>2) <strong>Hypothesenbildung</strong>, Konzeptionellbegriffliche Ebene</li>
+<li>3) <strong> Hypothesenprüfung</strong>, Methodische Empirie</li>
+</ul></p>
+<p>Whitehead, 1929: </p>
+    <blockquote style="opacity:.85; border-left:2px solid rgba(0,255,102,.4); padding-left:12px; margin-left:0;">
+      „The true method of discovery is like the flight of an aeroplane. It starts from the ground of particular observation; 
+      it makes a flight in the thin air of imaginative generalization; and it again lands for renewd observation rendered acute 
+      by rational interpretation.“
+    </blockquote>
 
 
 
