Allow per-page key column width

--- a/white-rabbit.html
+++ b/white-rabbit.html
@@ -83,6 +83,9 @@
     .home:hover{ opacity:1; }
 
     /* legend-table styles live in matrix-effects.css */
+    body.white-rabbit .legend-table{
+      --key-col: auto;
+    }
   </style>
   <link rel="stylesheet" href="bookmarks.css">
   <link rel="stylesheet" href="search.css">
@@ -90,7 +93,7 @@
   <link rel="stylesheet" href="music.css">
   <link rel="stylesheet" href="matrix-effects.css">
 </head>
-<body>
+<body class="white-rabbit">
   <canvas id="rain"></canvas>
 
   <nav class="home-only">
