Add CRT on-load and link transition

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
   <link rel="stylesheet" href="toc.css">
   <link rel="stylesheet" href="music.css">
   <link rel="stylesheet" href="matrix-effects.css">
+  <link rel="stylesheet" href="crt.css">
 </head>
 <body data-rain-fixed="1">
 
@@ -151,5 +152,6 @@
   <script src="toc.js"></script>
   <script src="music.js"></script>
   <script src="view.js"></script>
+  <script src="crt.js"></script>
 </body>
 </html>
