--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -180,6 +180,7 @@
   <link rel="stylesheet" href="../toc.css">
   <link rel="stylesheet" href="../music.css">
   <link rel="stylesheet" href="../matrix-effects.css">
+  <link rel="stylesheet" href="../crt.css">
 </head>
 <body>
   <canvas id="rain"></canvas>
@@ -365,20 +366,24 @@ von diesem Effekt betroffen).</p></li>
 
 
 
-    <h2>Lore Ipsum</h2>
-    <p><strong>Bold text</strong> and <em>italic text</em> example.</p>
-    <p><strong><em>Bold and italic text</em></strong> example.</p>
-    <p>Inline code example: <code>inline-code()</code></p>
-    <blockquote style="opacity:.85; border-left:2px solid rgba(0,255,102,.4); padding-left:12px; margin-left:0;">
-      „Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.“
-    </blockquote>
+<p><strong>Es gibt zwei Säulen der wissenschaftlichen Methode:</strong></p>
+<p></p>
+<table class="legend-table" style="--key-col: 50%;">
+    ...
+</table>
 
-    <h2 id="grundbegriffe">Grundbegriffe</h2>
-    <p id="src-int-valid">
-      <a href="#int-valid" class="wikilink">Internale Validität</a> ist für externale Validität eine notwendige,
-      aber keine hinreichende Bedingung.
-    </p>
+
+
+    <table class="legend-table">
+    <thead>
+      <tr><th>Key</th><th>Aktion</th></tr>
+    </thead>
+    <tbody>
+      <tr><td><code>A</code></td><td>Zum nächsten Abschnitt springen</td></tr>
+      <tr><td><code>B</code></td><td>Lesezeichen setzen</td></tr>
+    </tbody>
+  </table>
+    
   </main>
 
   <script>
@@ -450,5 +455,6 @@ von diesem Effekt betroffen).</p></li>
   <script src="../toc.js"></script>
   <script src="../music.js"></script>
   <script src="../view.js"></script>
+  <script src="../crt.js"></script>
 </body>
 </html>
