--- a/elektrotechnik/elektrotechnik.html
+++ b/elektrotechnik/elektrotechnik.html
@@ -90,6 +90,7 @@ a:hover{
   <link rel="stylesheet" href="../toc.css">
   <link rel="stylesheet" href="../music.css">
   <link rel="stylesheet" href="../matrix-effects.css">
+  <link rel="stylesheet" href="../crt.css">
 </head>
 <body>
   <canvas id="rain"></canvas>
@@ -184,5 +185,6 @@ a:hover{
   <script src="../toc.js"></script>
   <script src="../music.js"></script>
   <script src="../view.js"></script>
+  <script src="../crt.js"></script>
 </body>
 </html>
