--- a/statistik.html
+++ b/statistik.html
@@ -85,6 +85,7 @@ a:hover{
   <link rel="stylesheet" href="toc.css">
   <link rel="stylesheet" href="music.css">
   <link rel="stylesheet" href="matrix-effects.css">
+  <link rel="stylesheet" href="crt.css">
 </head>
 <body>
   <canvas id="rain"></canvas>
@@ -142,5 +143,6 @@ a:hover{
   <script src="toc.js"></script>
   <script src="music.js"></script>
   <script src="view.js"></script>
+  <script src="crt.js"></script>
 </body>
 </html>
