--- a/white-rabbit.html
+++ b/white-rabbit.html
@@ -92,6 +92,7 @@
   <link rel="stylesheet" href="toc.css">
   <link rel="stylesheet" href="music.css">
   <link rel="stylesheet" href="matrix-effects.css">
+  <link rel="stylesheet" href="crt.css">
 </head>
 <body class="white-rabbit">
   <canvas id="rain"></canvas>
@@ -197,5 +198,6 @@
   <script src="toc.js"></script>
   <script src="music.js"></script>
   <script src="view.js"></script>
+  <script src="crt.js"></script>
 </body>
 </html>
